--- a/todo-list-SPFx/SPFx/src/webparts/todoList/components/TodoList.module.css
+++ b/todo-list-SPFx/SPFx/src/webparts/todoList/components/TodoList.module.css
@@ -48,6 +48,10 @@
   margin: 24px 24px auto auto;
 }
 
+.add-button-input>label>div {
+  margin-bottom: auto;
+}
+
 .item {
   margin: 10px;
   display: flex;
@@ -64,6 +68,7 @@ span {
 
 .is-completed-input>label>div {
   border-radius: 50%;
+  margin-top: 5px;
 }
 
 .description {
