--- a/hello-world-tab/tabs/src/components/sample/Welcome.css
+++ b/hello-world-tab/tabs/src/components/sample/Welcome.css
@@ -64,6 +64,18 @@ code {
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
+.dark pre {
+  background-color: #1b1b1b;
+}
+
+.dark code {
+  background-color: #1b1b1b;
+}
+
+.dark div.error {
+  background-color: #1b1b1b;
+}
+
 .error {
   color: red;
 }
