updated the Tab razor
replaced person component with the login component

--- a/graph-toolkit-productivity-hub-aspnetcore/OneProductivityHubAspNetCore/Pages/Tab.razor
+++ b/graph-toolkit-productivity-hub-aspnetcore/OneProductivityHubAspNetCore/Pages/Tab.razor
@@ -5,7 +5,7 @@
    
     <div>
 
-        <mgt-person person-query="me" view="twoLines"></mgt-person>
+        <mgt-login></mgt-login>
 
 
         <div class="features">
