--- a/graph-toolkit-productivity-hub-aspnetcore/OneProductivityHubAspNetCore/Pages/Tab.razor.css
+++ b/graph-toolkit-productivity-hub-aspnetcore/OneProductivityHubAspNetCore/Pages/Tab.razor.css
@@ -42,7 +42,7 @@
         font-weight: 600;
     }
 
-mgt-person {
+mgt-login {
     margin-top: 20px;
     margin-left: 20px;
     --avatar-size: 60px;
