chore: adjust the style of calendar widget

--- a/team-central-dashboard/src/views/styles/Calendar.css
+++ b/team-central-dashboard/src/views/styles/Calendar.css
@@ -4,6 +4,7 @@
   overflow-x: hidden;
   min-width: 18rem;
   grid-template-rows: repeat(2, max-content);
+  align-content: start;
 }
 
 .no-meeting-layout {
