--- a/team-central-dashboard/src/views/styles/Document.css
+++ b/team-central-dashboard/src/views/styles/Document.css
@@ -55,7 +55,7 @@
 }
 
 .footer-margin {
-  padding: 0px 1.25rem 1.25rem 1.25rem !important;
+  margin: 0px 1.25rem 1.25rem 1.25rem !important;
 }
 
 .doc-no-padding {
