--- a/hello-world-tab-with-backend/src/components/sample/Welcome.css
+++ b/hello-world-tab-with-backend/src/components/sample/Welcome.css
@@ -39,6 +39,15 @@
   margin: 4rem auto;
 }
 
+.tabList {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 30px 20px;
+  row-gap: 30px;
+}
+
 pre,
 div.error {
   background-color: #e5e5e5;
@@ -64,14 +73,17 @@ code {
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-.dark pre {
-  background-color: #1b1b1b;
+.contrast pre,
+.contrast code,
+.contrast div.error {
+  background-color: #000000;
+  border-color: #ffffff;
+  border-width: thin;
+  border-style: solid;
 }
 
-.dark code {
-  background-color: #1b1b1b;
-}
-
+.dark pre,
+.dark code,
 .dark div.error {
   background-color: #1b1b1b;
 }
