feat: update bot with tab to use fluentui v9 and react 18

--- a/hello-world-bot-with-tab/tab/src/components/sample/Welcome.css
+++ b/hello-world-bot-with-tab/tab/src/components/sample/Welcome.css
@@ -35,8 +35,13 @@
   text-align: center;
 }
 
-.sections > * {
-  margin: 4rem auto;
+.tabList {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 30px 20px;
+  row-gap: 30px;
 }
 
 pre,
