--- a/todo-list-with-Azure-backend-M365/tabs/src/components/App.css
+++ b/todo-list-with-Azure-backend-M365/tabs/src/components/App.css
@@ -6,11 +6,11 @@ h1 {
 }
 .PropName {
   font-weight: bold;
-  color: #6264A7;
+  color: #6264a7;
 }
 .Logo {
   font-size: 45pt;
-  color: #6264A7;
+  color: #6264a7;
 }
 .Error {
   color: red;
