--- a/todo-list-with-Azure-backend-M365/tabs/src/components/Tab.css
+++ b/todo-list-with-Azure-backend-M365/tabs/src/components/Tab.css
@@ -1,172 +1,183 @@
 body,
-#root>div {
-    background-color: #F3F2F1;
+#root > div {
+  background-color: #f3f2f1;
 }
 
 .flex-container {
-    display: flex;
-    max-width: 900px;
-    margin: auto;
+  display: flex;
+  max-width: 900px;
+  margin: auto;
 }
 
 .todo-col {
-    width: 100%;
+  width: 100%;
 }
 
 .todo {
-    min-height: 95vh;
-    margin: 20px;
-    background-color: #FFF;
-    box-shadow: 0px 1.2px 3.6px rgba(0, 0, 0, 0.11), 0px 6.4px 14.4px rgba(0, 0, 0, 0.13);
-    border-radius: 4px;
+  min-height: 95vh;
+  margin: 20px;
+  background-color: #fff;
+  box-shadow: 0px 1.2px 3.6px rgba(0, 0, 0, 0.11),
+    0px 6.4px 14.4px rgba(0, 0, 0, 0.13);
+  border-radius: 4px;
 }
 
 .header {
-    display: flex;
+  display: flex;
 }
 
 .title {
-    margin: 20px;
+  margin: 20px;
 }
 
 .title h2 {
-    margin: 0;
-    font-size: 18px;
-    line-height: 24px;
+  margin: 0;
+  font-size: 18px;
+  line-height: 24px;
 }
 
 .title span {
-    margin: 3px 0;
-    font-size: 12px;
-    line-height: 12px;
-    color: #8A8886;
+  margin: 3px 0;
+  font-size: 12px;
+  line-height: 12px;
+  color: #8a8886;
 }
 
 .add-button {
-    margin: 24px 20px auto auto;
+  margin: 24px 20px auto auto;
 }
 
 .header-container {
-    display: flex;
+  display: flex;
 }
 
 .header-container span {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .note {
-    padding-left: 95px;
-    flex-grow: 1;
+  padding-left: 100px;
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
 }
 
 .created-by {
-    width: 290px;
+  width: 290px;
+  display: flex;
+  align-items: center;
 }
 
 .item {
-    margin: 10px 20px;
-    padding-bottom: 10px;
-    display: flex;
-    border-bottom: solid;
-    border-width: 1px;
-    border-color: #E0E0E0;
+  margin: 10px 20px;
+  padding-bottom: 10px;
+  display: flex;
+  border-bottom: solid;
+  border-width: 1px;
+  border-color: #e0e0e0;
+  align-items: center;
 }
 
 span {
-    display: inline-block;
-    margin: 5px;
+  display: inline-block;
+  margin: 5px;
 }
 
 .complete {
-    padding-left: 20px;
-    width: 60px;
+  padding-left: 20px;
+  width: 60px;
 }
 
 .is-completed-input {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
-.is-completed-input>div {
-    border-radius: 50%;
+.is-completed-input > div {
+  border-radius: 50%;
 }
 
 .description {
-    flex-grow: 1;
-    padding-right: 10px;
+  flex-grow: 1;
+  padding-right: 10px;
+  margin-right: 10px;
 }
 
-.description>div {
-    width: 100%;
+.description span {
+  width: 100%;
 }
 
 .text input {
-    width: 100%;
+  width: 100%;
 }
 
 .text input:not(:focus) {
-    background-color: #FFF;
+  background-color: #fff;
 }
 
 .text.is-completed input {
-    text-decoration-line: line-through;
+  text-decoration-line: line-through;
 }
 
 .action button {
-    border-width: 0px;
-    box-shadow: none;
+  border-width: 0px;
+  box-shadow: none;
 }
 
 .action button:hover {
-    background-color: #FFF;
+  background-color: #fff;
+}
+
+.action button[aria-expanded="true"] {
+  margin-right: -10px;
 }
 
 .action button span {
-    font-size: 20px;
-    margin-top: -8px;
+  font-size: 20px;
+  margin-top: -8px;
 }
 
 .no-item {
-    margin-top: 10vh;
+  margin-top: 10vh;
 }
 
 .no-item img {
-    display: block;
-    margin: auto;
-    width: 200px;
+  display: block;
+  margin: auto;
+  width: 200px;
 }
 
 .no-item h2,
 .no-item p {
-    text-align: center;
+  text-align: center;
 }
 
 .auth {
-    margin-top: 30vh;
+  margin-top: 30vh;
 }
 
 .auth .profile {
-    margin: auto;
+  margin: auto;
 }
 
 .auth h2 {
-    text-align: center;
+  text-align: center;
 }
 
 .auth button {
-    display: block;
-    margin: 32px auto;
+  display: block;
+  margin: 32px auto;
 }
 
 @media only screen and (max-width: 820px) {
-    .flex-container {
-        display: block;
-    }
+  .flex-container {
+    display: block;
+  }
 
-    .created-by {
-        width: 210px;
-    }
+  .created-by {
+    width: 210px;
+  }
 
-    .profile-col {
-        height: auto;
-    }
+  .profile-col {
+    height: auto;
+  }
 }
