--- a/graph-toolkit-contact-exporter/src/components/Tab.css
+++ b/graph-toolkit-contact-exporter/src/components/Tab.css
@@ -1,106 +1,110 @@
 body,
-#root>div {
-    background-color: #F3F2F1;
+#root > div {
+  background-color: #f3f2f1;
 }
 
 .flex-container {
-    display: flex;
-    max-width: 900px;
-    margin: auto;
+  display: flex;
+  max-width: 900px;
+  margin: auto;
 }
 
 .features-col {
-    width: 100%;
+  width: 100%;
 }
 
 .features {
-    min-height: 95vh;
-    margin: 20px;
-    background-color: #FFF;
-    box-shadow: 0px 1.2px 3.6px rgba(0, 0, 0, 0.11), 0px 6.4px 14.4px rgba(0, 0, 0, 0.13);
-    border-radius: 4px;
+  min-height: 95vh;
+  margin: 20px;
+  background-color: #fff;
+  box-shadow: 0px 1.2px 3.6px rgba(0, 0, 0, 0.11),
+    0px 6.4px 14.4px rgba(0, 0, 0, 0.13);
+  border-radius: 4px;
 }
 
 .header {
-    display: flex;
-    background-color: #f0f0f0;
+  display: flex;
+  background-color: #f0f0f0;
 }
 
 .title {
-    margin: 20px;
-    width: 100%;
+  margin: 20px;
+  width: 100%;
 }
 
 .title h2 {
-    margin: 0;
-    font-size: 18px;
-    line-height: 24px;
-    display: inline;
-    width: 100%;
+  margin: 0;
+  font-size: 18px;
+  line-height: 24px;
+  display: inline;
+  width: 100%;
 }
 
 .people-picker-area {
-    padding: 20px;
-    width: 100%;
+  padding: 20px;
 }
 
-.table-area{
-    margin: 20px;
-    padding-bottom: 100px;
-    height: 200px;
-    overflow: scroll;
-    border: #8A8886;
-    border-style: solid;
+.fui-TableCellLayout__main {
+  overflow: hidden;
 }
 
-.export-btn-container{
-    overflow: auto;
+.table-area {
+  margin: 20px;
+  padding-bottom: 100px;
+  height: 200px;
+  overflow: scroll;
+  border: #8a8886;
+  border-style: solid;
+}
+
+.export-btn-container {
+  overflow: auto;
 }
 
 .export-btn {
-    float: right;
-    padding: 20px;
+  float: right;
+  padding: 20px;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .title span {
-    margin: 3px 0;
-    font-size: 12px;
-    line-height: 12px;
-    color: #8A8886;
+  margin: 3px 0;
+  font-size: 12px;
+  line-height: 12px;
+  color: #8a8886;
 }
 
 .my-account-area {
-    padding: 12;
+  padding: 12;
 }
 
 .header-container span {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 span {
-    display: inline-block;
-    margin: 5px;
+  display: inline-block;
+  margin: 5px;
 }
 
 .auth {
-    margin-top: 30vh;
+  margin-top: 30vh;
 }
 
 .auth h2 {
-    text-align: center;
+  text-align: center;
 }
 
 .auth button {
-    display: block;
-    margin: 32px auto;
+  display: block;
+  margin: 32px auto;
 }
 
 @media only screen and (max-width: 820px) {
-    .flex-container {
-        display: block;
-    }
+  .flex-container {
+    display: block;
+  }
 }
