--- a/team-central-dashboard/src/index.css
+++ b/team-central-dashboard/src/index.css
@@ -4,11 +4,12 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Segoe UI Variable Static Text Light", "Roboto", "Oxygen", "Ubuntu",
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Segoe UI Variable Static Text Light", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100%; 
+  height: 100%;
   margin: auto;
   overflow-x: hidden;
 }
@@ -16,4 +17,3 @@ body {
 ::-webkit-scrollbar {
   display: none;
 }
-
