--- a/whos-next-meeting-app/alt-tabs-azure/tabs/src/components/App.css
+++ b/whos-next-meeting-app/alt-tabs-azure/tabs/src/components/App.css
@@ -1,30 +1,30 @@
 .App {
   text-align: center;
 }
-  
+
 .container {
   padding: 25px;
 }
-  
+
 h1 {
   color: gray;
 }
 h2 {
-  font-size: .8em;
+  font-size: 0.8em;
 }
 .PropName {
   font-weight: bold;
-  color: #6264A7;
+  color: #6264a7;
 }
 .Logo {
   font-size: 45pt;
-  color: #6264A7;
+  color: #6264a7;
 }
 .Error {
   color: red;
 }
 
-.middle{
+.middle {
   background-color: 80DED9;
   text-align: center;
 }
