--- a/team-central-dashboard/src/App.css
+++ b/team-central-dashboard/src/App.css
@@ -1,3 +1,3 @@
-.app {
-  background-color: var(--colorTransparentBackground) !important;
+#fluent-provider {
+  background-color: var(--colorTransparentBackground);
 }
