--- a/team-central-dashboard/src/styles/Task.css
+++ b/team-central-dashboard/src/styles/Task.css
@@ -1,9 +1,3 @@
-.border-style {
-  border-style: solid;
-  border-width: 1px;
-  border-color: white;
-}
-
 .has-task-layout {
   display: grid;
   gap: 0.25rem;
@@ -42,12 +36,13 @@
   background-color: var(--colorNeutralBackground3);
 }
 
-.add-task-container {
+.add-task {
   display: grid;
   grid-template-columns: max-content 1fr max-content;
-  gap: 1rem;
+  column-gap: 1rem;
   align-items: center;
-  border-radius: 4px;
+  border-radius: var(--borderRadiusMedium);
+  border: 1px solid var(--colorTransparentStroke);
   height: 2.25rem;
   padding-left: 0.875rem;
   padding-right: 0.7rem;
@@ -58,7 +53,7 @@
   width: max-content;
   height: 1.5rem;
   border: none;
-  font-weight: 600;
+  font-weight: var(--fontWeightSemibold);
   text-align: center;
   background-color: var(--colorNeutralStroke1Hover);
 }
@@ -68,18 +63,19 @@
   width: max-content;
   height: 1.5rem;
   border: none;
-  font-weight: 600;
+  font-weight: var(--fontWeightSemibold);
   text-align: center;
   background-color: var(--colorNeutralStrokeOnBrand2);
 }
 
-.existing-task-layout {
+.task-item {
   display: grid;
   grid-template-columns: 1fr max-content;
-  gap: 1rem;
+  column-gap: var(--spacingVerticalL);
   align-items: center;
   background-color: var(--colorNeutralBackground3);
-  border-radius: 4px;
+  border-radius: var(--borderRadiusMedium);
+  border: 1px solid var(--colorTransparentStroke);
   height: 2.25rem;
   padding-left: 0.875rem;
   padding-right: 0.7rem;
