--- a/team-central-dashboard/src/styles/Collaboration.css
+++ b/team-central-dashboard/src/styles/Collaboration.css
@@ -1,14 +1,23 @@
 .colla-body {
+  overflow-x: hidden;
+}
+
+.colla-content {
   display: grid;
   gap: 0.75rem;
-  overflow-x: auto;
   grid-template-columns: repeat(4, 1fr);
+  overflow-x: scroll;
+  white-space: nowrap;
 }
 
 .collo-item {
   display: grid;
   min-width: 12.5rem;
 }
+
+.collo-item img {
+  width: 100%;  
+} 
 
 .collo-item .title {
   font-weight: var(--fontWeightSemibold);
