--- a/team-central-dashboard/src/styles/Chart.css
+++ b/team-central-dashboard/src/styles/Chart.css
@@ -4,7 +4,7 @@
 
 #area-chart-title {
   font-weight: var(--fontWeightBold);
-  font-size: 1.125rem;
+  font-size: var(--fontSizeBase500);
   line-height: 1.5rem;
   color: var(--color-neutralForeground1);
 }
@@ -15,7 +15,7 @@
 
 .legend {
   display: grid;
-  gap: 1rem;
+  column-gap: var(--spacingHorizontalL);
   grid-template-columns: repeat(7, max-content);
   align-items: center;
   margin-bottom: 1.25rem;
@@ -25,7 +25,7 @@
 .legend .item {
   display: grid;
   grid-template-columns: max-content 1fr;
-  gap: 0.25rem;
+  column-gap: var(--spacingHorizontalXS);
   align-items: end;
 }
 
@@ -49,7 +49,7 @@
 
 .time-span {
   display: grid;
-  gap: 3rem;
+  column-gap: 3rem;
   grid-template-columns: repeat(3, max-content);
 }
 
@@ -82,7 +82,7 @@
 
 .table-layout {
   display: grid;
-  gap: 0.69rem;
+  row-gap: var(--spacingVerticalM);
   margin-top: 2.5rem;
 }
 
@@ -94,33 +94,33 @@
 
 .backlog span {
   font-weight: var(--fontWeightSemibold);
-  font-size: 0.75rem;
+  font-size: var(--fontSizeBase200);
   line-height: 1rem;
 }
 
 .table-content {
   display: grid;
   overflow-x: auto;
-  gap: 0.75rem;
+  row-gap: var(--spacingVerticalM);
 }
 
 .table-header {
   display: grid;
   grid-template-columns: minmax(18rem, 4fr) repeat(2, minmax(8rem, 2fr)) repeat(2, minmax(4rem, 1fr));
-  gap: 0.6rem;
+  column-gap: var(--spacingHorizontalMNudge);
   align-items: center;
 }
 
 .table-header span {
   font-weight: var(--fontWeightRegular);
-  font-size: 0.75rem;
+  font-size: var(--fontSizeBase200);
   line-height: 2rem;
   color: var(--colorNeutralForeground4);
 }
 
 .table-body {
   display: grid;
-  gap: 0.6rem;
+  row-gap: var(--spacingVerticalMNudge);
 }
 
 .table-row {
@@ -130,13 +130,13 @@
 
 .table-row .title {
   display: grid;
-  gap: 0.6rem;
+  column-gap: var(--spacingHorizontalMNudge);
   grid-template-columns: max-content max-content 1fr;
 }
 
 .table-row .avatar {
   display: grid;
-  gap: 0.25rem;
+  column-gap: var(--spacingHorizontalXS);
   align-items: center;
   grid-template-columns: max-content 1fr;
 }
@@ -145,12 +145,12 @@
   display: grid;
   align-items: center;
   grid-template-columns: 1fr 1fr;
-  gap: 0.375rem;
+  column-gap: var(--spacingHorizontalSNudge);
 }
 
 .table-row .state span {
   font-weight: var(--fontWeightBold) ;
-  font-size: 0.625rem ;
+  font-size: var(--fontSizeBase100);
   line-height: 0.75rem;
   color: var(--colorNeutralForeground1);
 }
