--- a/team-central-dashboard/src/styles/Document.css
+++ b/team-central-dashboard/src/styles/Document.css
@@ -8,10 +8,6 @@
 .no-doc-layout {
   display: grid;
   height: 100%;
-  justify-content: center;
-  align-content: center;
-  overflow-x: hidden;
-  min-width: 18rem;
 }
 
 .doc-container {
@@ -28,7 +24,7 @@
 .doc-item-content {
   display: grid;
   grid-template-columns: 1fr max-content;
-  gap: 1rem;
+  column-gap: var(--spacingHorizontalL);
   align-items: center;
   height: 2.75rem;
   padding-left: 1.25rem;
@@ -46,7 +42,7 @@
 .doc-info-layout {
   display: grid;
   grid-template-columns: max-content 1fr;
-  gap: 1rem;
+  column-gap: var(--spacingHorizontalL);
   align-items: center;
 }
 
