--- a/team-central-dashboard/src/styles/Common.css
+++ b/team-central-dashboard/src/styles/Common.css
@@ -8,6 +8,7 @@
 
 .empty-layout {
   display: grid;
+  height: 100%;
   row-gap: var(--spacingVerticalL);
   align-content: center;
   justify-content: center;
