--- a/team-central-dashboard/src/styles/MyDashboard.css
+++ b/team-central-dashboard/src/styles/MyDashboard.css
@@ -18,8 +18,10 @@
   position: absolute;
   width: 100%;
   margin-left: -20px;
-  margin-top: -10%;
+  margin-top: -64px;
   z-index: -1;
+  max-height: 216px;
+  min-height: 120px;
 }
 
 .spinner-layout {
