--- a/team-central-dashboard/src/styles/Task.css
+++ b/team-central-dashboard/src/styles/Task.css
@@ -1,22 +1,9 @@
-.border-style {
-  border-style: solid;
-  border-width: 1px;
-  border-color: white;
-}
-
 .has-task-layout {
   display: grid;
-  gap: 0.25rem;
+  row-gap: var(--spacingVerticalXS);
   overflow-x: hidden;
   min-width: 18rem;
   align-content: start;
-}
-
-.no-task-layout {
-  display: grid;
-  gap: 1.8rem;
-  overflow-x: hidden;
-  min-width: 18rem;
 }
 
 .add-btn {
@@ -30,7 +17,7 @@
   outline: medium;
   height: 1.75rem;
   margin-left: -0.35rem;
-  font-size: 0.875rem;
+  font-size: var(--fontSizeBase300);
   color: var(--colorNeutralForeground1);
 }
 
@@ -42,44 +29,46 @@
   background-color: var(--colorNeutralBackground3);
 }
 
-.add-task-container {
+.add-task {
   display: grid;
   grid-template-columns: max-content 1fr max-content;
-  gap: 1rem;
+  column-gap: var(--spacingHorizontalL);
   align-items: center;
-  border-radius: 4px;
+  border-radius: var(--borderRadiusMedium);
+  border: 1px solid var(--colorTransparentStroke);
   height: 2.25rem;
   padding-left: 0.875rem;
   padding-right: 0.7rem;
 }
 
 .add-btn-enter {
-  border-radius: 4px;
+  border-radius: var(--borderRadiusMedium);
   width: max-content;
   height: 1.5rem;
   border: none;
-  font-weight: 600;
+  font-weight: var(--fontWeightSemibold);
   text-align: center;
   background-color: var(--colorNeutralStroke1Hover);
 }
 
 .add-btn-leave {
-  border-radius: 4px;
+  border-radius: var(--borderRadiusMedium);
   width: max-content;
   height: 1.5rem;
   border: none;
-  font-weight: 600;
+  font-weight: var(--fontWeightSemibold);
   text-align: center;
   background-color: var(--colorNeutralStrokeOnBrand2);
 }
 
-.existing-task-layout {
+.task-item {
   display: grid;
   grid-template-columns: 1fr max-content;
-  gap: 1rem;
+  column-gap: var(--spacingHorizontalL);
   align-items: center;
   background-color: var(--colorNeutralBackground3);
-  border-radius: 4px;
+  border-radius: var(--borderRadiusMedium);
+  border: 1px solid var(--colorTransparentStroke);
   height: 2.25rem;
   padding-left: 0.875rem;
   padding-right: 0.7rem;
