--- a/developer-assist-dashboard/src/App.css
+++ b/developer-assist-dashboard/src/App.css
@@ -1,3 +1,3 @@
-.app {
-  background-color: var(--colorTransparentBackground) !important;
+#app {
+  background-color: var(--colorTransparentBackground);
 }
