--- a/developer-assist-dashboard/src/styles/GitHubIssues.css
+++ b/developer-assist-dashboard/src/styles/GitHubIssues.css
@@ -8,7 +8,7 @@
 .issue-create {
     display: grid;
     grid-template-columns: max-content 1fr max-content;
-    gap: 1rem;
+    column-gap: var(--spacingHorizontalL);
     align-items: center;
     border: 1px solid var(--colorNeutralStroke1);
     height: 2.25rem;
@@ -30,11 +30,11 @@
 }
 
 .issue-create .add-btn {
-    border-radius: 4px;
+    border-radius: var(--borderRadiusMedium);
     width: max-content;
     height: 1.5rem;
     border: none;
-    font-weight: 600;
+    font-weight: var(--fontWeightSemibold);
     text-align: center;
     background-color: var(--colorNeutralStrokeOnBrand2);
 }
@@ -54,7 +54,7 @@
     outline: medium;
     height: 1.75rem;
     margin-left: -0.35rem;
-    font-size: 0.875rem;
+    font-size: var(--fontSizeBase300);
 }
 
 .input-issue-unfocused {    
@@ -99,15 +99,13 @@
 
 .issues .item div .state {
     color: var(--colorPaletteBlueBorderActive);
-    font-weight: 400;
-    font-size: 0.875rem;
-    line-height: 1.25rem;
+    font-size: var(--fontSizeBase300);
+    line-height: var(--lineHeightBase300);
 }
 
 .issues .item div .desc {
-    font-weight: 400;
-    font-size: 0.75rem;
-    line-height: 1.25rem;
+    font-size: var(--fontSizeBase200);
+    line-height: var(--lineHeightBase300);
     color: var(--colorNeutralForeground3);
     overflow-x: hidden;
     text-overflow: ellipsis;
