--- a/developer-assist-dashboard/src/styles/PlannerTask.css
+++ b/developer-assist-dashboard/src/styles/PlannerTask.css
@@ -1,6 +1,6 @@
 .planner-layout {
   display: grid;
-  gap: 0.25rem;
+  row-gap: var(--spacingVerticalXS);
   overflow-x: hidden;
   min-width: 18rem;
   align-content: start;
@@ -17,7 +17,7 @@ input::placeholder {
   grid-template-columns: 1fr max-content;
   align-items: start;
   column-gap: var(--spacingHorizontalS);
-  border-radius: 4px;
+  border-radius: var(--borderRadiusMedium);
   padding-left: 0.875rem;
   padding-right: 0.7rem;
   border: 1px solid var(--colorTransparentStroke);
@@ -44,17 +44,17 @@ input::placeholder {
   outline: medium;
   height: 1.75rem;
   margin-left: -0.35rem;
-  font-size: 0.875rem;
+  font-size: var(--fontSizeBase300);
   color: var(--colorNeutralForeground1);
   background-color: var(--colorNeutralBackground3);
 }
 
 .add-task button {
-  border-radius: 4px;
+  border-radius: var(--borderRadiusMedium);
   width: max-content;
   height: 1.5rem;
   border: none;
-  font-weight: 600;
+  font-weight: var(--fontWeightSemibold);
   text-align: center;
   background-color: var(--colorNeutralStrokeOnBrand2);
 }
