--- a/sso-enabled-tab-via-apim-proxy/src/components/Tab.css
+++ b/sso-enabled-tab-via-apim-proxy/src/components/Tab.css
@@ -14,12 +14,13 @@ body,
 }
 
 .features {
-  min-height: 20vh;
+  min-height: 15vh;
   margin: 20px;
   background-color: #fff;
   box-shadow: 0px 1.2px 3.6px rgba(0, 0, 0, 0.11),
     0px 6.4px 14.4px rgba(0, 0, 0, 0.13);
   border-radius: 4px;
+  align-items: center;
 }
 
 .header {
@@ -30,6 +31,7 @@ body,
 .title {
   margin: 20px;
   width: 100%;
+  text-align: center;
 }
 
 .title h2 {
